<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">
    
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:id="@+id/email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/digtEmail1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email_empty"
            android:inputType="textEmailAddress"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edit_text"/>

        <TextView
            android:id="@+id/senha1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/digtSenha1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/password_empty"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_edit_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_login_fragment"
            android:textColor="@color/padrao"
            app:backgroundTint="@null"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn"/>
        <LinearLayout
            android:id="@+id/linearlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_register_login_fragment"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/btnRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_recover_login_fragment"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/white"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            tools:visibility="visible"
            android:visibility="invisible"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>